--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@
             <div class="faq-item">
                 <p>Como posso fazer um pedido?</p>
                 <p>Você pode fazer um pedido clicando no botão "Comprar Agora" ao lado de cada produto ou entrando em contato conosco via WhatsApp pelo 
-                    <a href="https://api.whatsapp.com/send?phone=13981430940&text=Olá! Gostaria de fazer um pedido.">(13) 98143-0940</a>
+                    <a href="https://api.whatsapp.com/send?phone=(11) 96840-8554&text=Olá! Gostaria de fazer um pedido.">(11) 96840-8554</a>
                 </p>
             </div>
             <br>
@@ -620,7 +620,7 @@
         <section id="contact" class="info">
             <p>Entre em Contato:</p>
             <div class="contact-item">
-                <p>WhatsApp: <a href="tel:+5513981430940">(13) 98143-0940</a></p>
+                <p>WhatsApp: <a href="tel:(11) 96840-8554">(11) 96840-8554</a></p>
             </div>
         </section>        
         
