--- a/index.html
+++ b/index.html
@@ -353,6 +353,35 @@
         input[type="submit"]:hover {
             background-color: blue;
         }
+
+        #products {
+            width: 100%; /* Ajuste a largura conforme necessário */
+            margin: 0 auto; /* Centraliza horizontalmente */
+            text-align: center; /* Centraliza o texto */
+        }
+
+        .product {
+            margin-bottom: 20px; /* Espaço entre os produtos */
+        }
+
+        .product img {
+            max-width: 100%; /* Garante que as imagens se ajustem ao contêiner */
+            height: auto;
+        }
+
+        .cta-button {
+            display: inline-block;
+            margin-top: 10px;
+            padding: 10px 20px;
+            background-color: #4CAF50;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+        }
+
+        .cta-button:hover {
+            background-color: #45a049;
+        }
     </style>
 </head>
 
