--- a/index.html
+++ b/index.html
@@ -368,20 +368,6 @@
             max-width: 100%; /* Garante que as imagens se ajustem ao contêiner */
             height: auto;
         }
-
-        .cta-button {
-            display: inline-block;
-            margin-top: 10px;
-            padding: 10px 20px;
-            background-color: #4CAF50;
-            color: white;
-            text-decoration: none;
-            border-radius: 5px;
-        }
-
-        .cta-button:hover {
-            background-color: #45a049;
-        }
     </style>
 </head>
 
@@ -396,11 +382,7 @@
     <!-- Video de fundo -->
     <video class="background-video" autoplay muted loop playsinline>
         <source src="assets/video.mp4" type="video/mp4">
-        Seu navegador não suporta a tag de vídeo.
-    </video>
-
-    <nav class="content">
-        <div class="menu-icon" onclick="toggleMenu()">
+        Seu navegador não suporta a tag ass="menu-icon" onclick="toggleMenu()">
             <i class="fas fa-bars"></i>
         </div>
         <div class="menu-items" id="menuItems">
